tenants/platform/services/tempo/postInstall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - tempo.jdwlabs.com
  rules:
    - backendRefs:
        - name: platform-tempo
          port: 3200
